// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropButton closes 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-gXzblK gTFGea"
  label="Dropper"
  type="button"
>
  <span
    class="StyledButton__StyledLabel-XZHBZ kthNMI"
  >
    Dropper
  </span>
</button>
`;

exports[`DropButton closes 2`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton closes 3`] = `
"@media only screen and (min-width:700px) {
  .gTFGea {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`DropButton mounts 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-gXzblK gTFGea"
  label="Dropper"
  type="button"
>
  <span
    class="StyledButton__StyledLabel-XZHBZ kthNMI"
  >
    Dropper
  </span>
</button>
`;

exports[`DropButton mounts 2`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton mounts 3`] = `
"@media only screen and (min-width:700px) {
  .gTFGea {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`DropButton mounts 4`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-gXzblK gTFGea"
  id="test"
  label="Dropper"
  tabindex="-1"
  type="button"
>
  <span
    class="StyledButton__StyledLabel-XZHBZ kthNMI"
  >
    Dropper
  </span>
</button>
`;

exports[`DropButton mounts 5`] = `
<div
  id="drop-contents"
>
  drop contents
</div>
`;

exports[`DropButton mounts 6`] = `
"@media only screen and (min-width:700px) {
  .gTFGea {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`DropButton mounts disabled 1`] = `
<button
  aria-label="Open Drop"
  class="StyledButton-gXzblK gXena"
  disabled=""
  label="Dropper"
  type="button"
>
  <span
    class="StyledButton__StyledLabel-XZHBZ kthNMI"
  >
    Dropper
  </span>
</button>
`;
